# serverframe-rs

./: Cargo.toml  README.md  config.yml  config_default.yml
dara/: .libraries.json  Darafile  tixuan.dara
docs/: ToDo.md  konw-how.md  restful.md  tikvclientbugs.md
examples/: casbin_test.rs  casbin_test2.rs  customerauth.rs  engula_resource.rs  ping_sample.rs  rbac_with_domains_policy.csv  static_deadlock.rs  tikv_txn.rs  yamlparser.rs
k6/: script.js
src/: main.rs
src/cmd/: configcmd.rs  mod.rs  rootcmd.rs  start.rs  stop.rs
src/commons/: sysutiles.rs
src/configure/: config_error.rs  config_global.rs  mod.rs  setting.rs
src/httpquerry/: globalhttpclient.rs  request.rs
src/httpserver/: httpserver.rs  mod.rs
src/httpserver/exception/: error.rs  mod.rs  response_error.rs
src/httpserver/handlers/: authhandler.rs  handler_httpquery.rs  login_handler.rs  mod.rs  rawkv_handler.rs  tpost.rs  user_handler.rs
src/httpserver/middleware/: authentication.rs
src/httpserver/module/: common_module.rs  mod.rs  request_module.rs  response_module.rs
src/httpserver/routers/: root.rs
src/httpserver/service/: mod.rs  service_tikv_raw.rs  tpost.rs
src/logger/: logger.rs
src/privilege/: authentication.rs  mod.rs  token.rs  user.rs
src/resources/: init_resources.rs  mod.rs  tikv.rs
