[package]
name = "serverframe-rs"
version = "0.1.0"
authors = ["jiashiwen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.7"
rustyline = "9.0.0"
shellwords = "1.1.0"
log = "0.4"
log4rs = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8"
rustyline-derive = "0.5.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
prettytable-rs = "^0.8"
anyhow = "1.0.45"
futures = "0.3.17"
fork = "0.1"
sysinfo = "0.21.2"
axum = "0.4.4"
axum-debug = "0.3.2"
tower-http = { version = "0.2", features = ["trace", "compression-full", "auth"] }
tower = { version = "0.4.11", features = ["timeout"] }
tikv-client = { git = "https://github.com/andylokandy/client-rust" }
strum = "0.23"
strum_macros = "0.23"
once_cell = "1.9.0"
async_once = "0.2.6"

[[example]]
name = "configrs"
path = "examples/configrs.rs"

[[example]]
name = "yamlparser"
path = "examples/yamlparser.rs"

[[example]]
name = "txn"
path = "examples/tikv_txn.rs"