[package]
name = "serverframe-rs"
version = "0.1.0"
authors = ["jiashiwen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.7"
rustyline = "9.0.0"
shellwords = "1.1.0"
log = "0.4"
log4rs = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8"
rustyline-derive = "0.5.0"
lazy_static = "1.4.0"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
prettytable-rs = "^0.8"
anyhow = "1.0.45"
futures = "0.3.17"
fork = "0.1"
sysinfo = "0.21.2"
axum = { version = "0.4.6", features = ["default", "headers"] }
axum-debug = "0.3.2"
tower-http = { version = "0.2", features = ["trace", "compression-full", "auth"] }
tower = { version = "0.4.11", features = ["timeout"] }
tikv-client = { git = "https://github.com/andylokandy/client-rust" }
casbin = { version = "2.0.9", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
strum = "0.23"
strum_macros = "0.23"
once_cell = "1.9.0"
async_once = "0.2.6"
http-body = "0.4.4"
rust-crypto = "^0.2"
chrono = "0.4"
base64 = "0.13.0"
dashmap = "5.1.0"
futures-locks = "0.7.0"
rust-embed = "6.3.0"

[[example]]
name = "casbinsample"
path = "examples/casbin_test.rs"
[[example]]
name = "casbinsample2"
path = "examples/casbin_test2.rs"
[[example]]
name = "auth"
path = "examples/customerauth.rs"

[[example]]
name = "yamlparser"
path = "examples/yamlparser.rs"

[[example]]
name = "txn"
path = "examples/tikv_txn.rs"